overflow fix

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body {
   font-family: "Roboto", "sans-serif";
   font-size: 16px;
   color: white;
+  overflow-x: hidden;
 }
 
 main {
